MB-58692: Check no cursors in CM::scheduleDestruction(CheckpointList&&)

Currently we enforce that check in Checkpoint::dtor and we hit a
failure at CheckpointDestroyerTask.
That's a bit too late in the logic. Move up the assertion at checkpoint
removal in CM, before we pass the removed checkpoints to the destroyer.

Change-Id: Ie72fbe3d2f878c5fb438a3372ab7210a2232963a
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/197355
Tested-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>